--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ToeplitzMatrices = "c751599d-da0a-543b-9d20-d0a503d91d24"
