--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,11 @@
 [deps]
 FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
+StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 ToeplitzMatrices = "c751599d-da0a-543b-9d20-d0a503d91d24"
